--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/ViewComment.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/ViewComment.cshtml
@@ -49,9 +49,13 @@
                             <button class="btn btn-primary collapsed mr-auto" data-toggle="collapse" data-target="@cmtToDataTarg" aria-expanded="false" aria-controls="collapseTwo">
                                 Reply
                             </button>
-                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="@cmtToDataTargModal">
-                                Delete
-                            </button>
+                            @if(Session["username"].ToString() == item.userName)
+                            {
+                                <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="@cmtToDataTargModal">
+                                    Delete
+                                </button>
+                            }
+                            
                         </div>
 
                         @*Reply box*@
