--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/Manage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/Manage.cshtml
@@ -94,9 +94,10 @@
             {
                 <div class="card">
                     <div class="card-body" style="padding-left:37px">
-                        <h4 class="card-title">@Html.DisplayFor(modelItem => item.title)</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.postDate)</h6>
-                        <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
+                        <a href="@Url.Action("ArticleManage", "Admin", new { id = item.articleID})" style="text-decoration: none;">
+                            <h4 class="card-title">@Html.DisplayFor(modelItem => item.title)</h4>
+                            <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.postDate)</h6>
+                            <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
                     </div>
                 </div>
             }
@@ -141,9 +142,10 @@
             {
                 <div class="card">
                     <div class="card-body" style="padding-left:37px">
-                        <h4 class="card-title">@Html.DisplayFor(modelItem => item.userName)</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.contactNo)</h6>
-                        <p class="card-text">@Html.DisplayFor(modelItem => item.description)</p>
+                        <a href="@Url.Action("DoctorManage", "Admin", new { id = item.userName})" style="text-decoration: none;">
+                            <h4 class="card-title">@Html.DisplayFor(modelItem => item.userName)</h4>
+                            <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.contactNo)</h6>
+                            <p class="card-text">@Html.DisplayFor(modelItem => item.description)</p>
                     </div>
                 </div>
             }
