--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/DoctorManage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/DoctorManage.cshtml
@@ -23,18 +23,21 @@
     </a>
 </div>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-    <div class="collapse navbar-collapse" id="navbarColor03">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active nav-link">
-                @Html.ActionLink("Close", "CloseDoc", "Admin", new SmokeFreeApplication.Controllers.DocQuery(Model.userName), null)
-                @Html.ActionLink("Approve", "ApproveDoc", "Admin", new SmokeFreeApplication.Controllers.DocQuery(Model.userName), null)
-                @Html.ActionLink("Reject", "RejectDoc", "Admin", new SmokeFreeApplication.Controllers.DocQuery(Model.userName), null)
-            </li>
+        <div class="collapse navbar-collapse" id="navbarColor03">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active nav-link">
+                    @Html.ActionLink("Close", "CloseDoc", "Admin", new SmokeFreeApplication.Controllers.DocQuery(Model.userName), null)
+                    @if (Model.adminVerify == false)
+                    {
+                        @Html.ActionLink("Approve", "ApproveDoc", "Admin", new SmokeFreeApplication.Controllers.DocQuery(Model.userName), null)
+                        @Html.ActionLink("Reject", "RejectDoc", "Admin", new SmokeFreeApplication.Controllers.DocQuery(Model.userName), null)
+                    }
+                    </li>
 
 
-        </ul>
+            </ul>
 
-    </div>
-</nav>
+        </div>
+    </nav>
