--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/BoardcastMessage.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/BoardcastMessage.cshtml
@@ -6,18 +6,29 @@
 
 @using (Html.BeginForm("broadcastForm", "Admin", FormMethod.Post))
 {
-    <table>
-        <tr>
-            <td>Title: </td>
-            <td>@Html.TextBoxFor(m => m.title, new { @class = "form-control", @placeholder = "title", required = "required" })</td>
-        </tr>
-        <tr>
-            <td>Content: </td>
-            <td>@Html.TextAreaFor(m => m.content, new { @class = "form-control", @placeholder = "message", required = "required",@cols = "100", @rows = "8", @style = "width:100%;" })</td>
-        </tr>
-        <tr>
-            <td colspan="2"><input type="submit" value="Submit Form" /></td>
-        </tr>
-    </table>
+<table>
+    <tr>
+        <td>Title: </td>
+        <td>@Html.TextBoxFor(m => m.title, new { @class = "form-control", @placeholder = "title", required = "required" })</td>
+    </tr>
+    <tr>
+        <td>Content: </td>
+        <td>@Html.TextAreaFor(m => m.content, new { @class = "form-control", @placeholder = "message", required = "required", @cols = "100", @rows = "8", @style = "width:100%;" })</td>
+    </tr>
+
+    <tr>
+        <td>
+            @Html.LabelFor(m => m.expiresTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.TextBoxFor(m => m.expiresTime, new { @type = "date", @class = "form-control datepicker" })
+            @Html.ValidationMessageFor(m => m.expiresTime, "", new { @class = "text-danger" })
+        </td>
+
+    </tr>
+    <tr>
+        <td colspan="2"><input type="submit" value="Submit Form" /></td>
+    </tr>
+</table>
 }
+
+
 
