Set up the view for braodcast
-added cookie to remember user setting of 'Never Show Again'
-put annoucement button in home(Needs to be changed to where it appear straight away)

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
@@ -32,13 +32,13 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    
+
 
 
 </div>
 
 <div class="row">
-    
+
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>Wonder how you can begin your journey to being smoke free? Start here today!</p>
@@ -55,3 +55,6 @@
         <p class="btn btn-default">@Html.ActionLink("About Us", "About", "Home")</p>
     </div>
 </div>
+
+
+@Html.Partial("_PopUp")
