-article upload image

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
@@ -10,43 +10,45 @@
 <h1>Create an Article</h1>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("createArticle", "Article", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
-    <form onsubmit="return false;">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<form onsubmit="return false;">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            <p>Title: </p>
-            <div>
-                @Html.TextBoxFor(model => model.title, new { htmlAttributes = new { @class = "form-control create-article-field" } })
-                @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <p>Title: </p>
+        <div>
+            @Html.TextBoxFor(model => model.title, new { htmlAttributes = new { @class = "form-control create-article-field" } })
+            @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            <p>Description: </p>
-            <div>
-                @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control create-article-field" } })
-                @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
-                <input type="file" class="form-control-file" name="ImageFile" id="ImageFile" />
-            </div>
+    <div class="form-group">
+        <p>Description: </p>
+        <div>
+            @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control create-article-field" } })
+            @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
         </div>
-
-        <div class="form-group">
-            <p>Tags: </p>
-            <div>
-                <input name="tagsinput" type="text" data-role="tagsinput" class="create-article-field" />
-            </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.articlePicture)</label>
+        <input type="file" class="form-control-file" name="ImageFile" id="ImageFile" />
+    </div>
+    <div class="form-group">
+        <p>Tags: </p>
+        <div>
+            <input name="tagsinput" type="text" data-role="tagsinput" class="create-article-field" />
         </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="button" onclick="this.form.submit();" value="Create" class="btn btn-default" />
-            </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="button" onclick="this.form.submit();" value="Create" class="btn btn-default" />
         </div>
-    </form>
+    </div>
+</form>
 }
 @section Scripts
 {
