--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_Layout.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_Layout.cshtml
@@ -18,8 +18,6 @@
         @Html.Partial("_SignedIn");
     }
 
-
-
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -29,6 +27,7 @@
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/search")
     @RenderSection("scripts", required: false)
 </body>
 </html>
