--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
@@ -37,12 +37,7 @@
         <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.articlePicture)</label>
         <input type="file" class="form-control-file" name="ImageFile" id="ImageFile" />
     </div>
-    <div class="form-group">
-        <p>Tags: </p>
-        <div>
-            <input name="tagsinput" type="text" data-role="tagsinput" class="create-article-field" />
-        </div>
-    </div>
+    @Html.Partial("~/Views/Shared/_TagField.cshtml")
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="button" onclick="this.form.submit();" value="Create" class="btn btn-default" />
