--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/CreateStory.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/CreateStory.cshtml
@@ -15,38 +15,32 @@
 {
     @Html.AntiForgeryToken()
 
-    <form onsubmit="return false;">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<form onsubmit="return false;">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            <p>Title: </p>
-            <div>
-                @Html.TextBoxFor(model => model.title, new { htmlAttributes = new { @class = "form-control create-story-field" } })
-                @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <p>Title: </p>
+        <div>
+            @Html.TextBoxFor(model => model.title, new { htmlAttributes = new { @class = "form-control create-story-field" } })
+            @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            <p>Description: </p>
-            <div>
-                @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control create-story-field" } })
-                @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        <p>Description: </p>
+        <div>
+            @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control create-story-field" } })
+            @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
         </div>
-
-        <div class="form-group">
-            <p>Tags: </p>
-            <div>
-                <input name="tagsinput" type="text" data-role="tagsinput" class="create-story-field" />
-            </div>
+    </div>
+    @Html.Partial("~/Views/Shared/_TagField.cshtml")
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="button" onclick="this.form.submit();" value="Create" class="btn btn-default" />
         </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="button" onclick="this.form.submit();" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </form>
+    </div>
+</form>
 }
 @section Scripts
 {
