--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/Stories.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/Stories.cshtml
@@ -8,26 +8,13 @@
 }
 <br />
 <h2>Stories</h2>
+<!---search partial view-->
+@Html.Partial("~/Views/Shared/_SearchBar.cshtml")
 
-<div class="alert alert-dismissible alert-primary" style="display:none;">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting again.
-</div>
-<!--Search-->
-@using (Html.BeginForm("Stories", "Story", FormMethod.Get, new { id = "searchForm" }))
-{
-    <b> Search By: </b>
-    @Html.RadioButton("option", "Name", new { id = "nameRad", @required = "required" })<text>Name</text>
-    @Html.RadioButton("option", "Tags", new { id = "tagRad" })<text> Tags </text>
-    <br />
-    <input name="search" id="searchBar" type="text" data-role="none" required" />
-    <input type="button" onclick="this.form.submit();" value="Search" id="searchBtn" class="btn btn-default" />
-
-}
-<!-------->
 <p>
     @Html.ActionLink("Create New", "CreateStory")
 </p>
+<!---display stories-->
 @foreach (var item in Model)
 {
     <div class="card" style="max-width: 70rem;">
@@ -54,13 +41,10 @@
     <br />
 
 }
-<!---linking pager to search display-->
+<!---paging link with search and option-->
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 @Html.PagedListPager(Model, page => Url.Action("Stories", new { page, option = ViewBag.option, search = ViewBag.search }))
-
-<!--Search script-->
 @section Scripts
 {
     <script type="text/javascript" src="~/Scripts/search.js"></script>
 }
-<!------->
