Update to broadcast
-tested broadcasting message instead of using dummy values

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/_PopUp.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/_PopUp.cshtml
@@ -15,7 +15,7 @@
     else
     {
         //just keeping this for debug
-        <button type="button" class="btn btn-info btn-sm" data-target="#MyModal" data-toggle="modal"> Disppeared</button>
+        //<button type="button" class="btn btn-info btn-sm" data-target="#MyModal" data-toggle="modal"> Disppeared</button>
     }
 
     <div class="modal" id="MyModal" role="dialog">
