Fixed link to interested party profile

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_SignedIn.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_SignedIn.cshtml
@@ -37,7 +37,7 @@
                     }
                     else if (Session["docOrMember"] == "member")
                     {
-                        @Html.ActionLink("Profile", "MemberProfile", "InterestedParty")
+                        @Html.ActionLink("Profile", "MemberProfile", "InterestedParty", new {viewUsername = Session["username"].ToString() }, new { page = 1 })
                     }
                     else if (Session["docOrMember"] == "admin")
                     {
