Update annouuncement colour

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 @model SmokeFreeApplication.Models.BroadcastMessage
 
-<div class="alert alert-success" role="alert">
+<div class="alert alert-info" role="alert">
     <h4 class="alert-heading">@Html.DisplayFor(modelItem => Model.title)</h4>
     <p>@Html.DisplayFor(modelItem => Model.content)</p>
     <hr>
